[package]
name = "rust_lambda"
version = "0.3.0"
authors = ["dfspray <daniel_spray@comcast.net>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["simulated"]
simulated = []

[dependencies]
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "client", "server", "stream", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
bytes = "1.0"
http = "0.2"
async-stream = "0.3"
futures = "0.3"
tracing-error = "0.1.2"
tracing = { version = "0.1", features = ["log"] }
tower-service = "0.3"
tokio-stream = "0.1.2"
lambda_runtime = "0.3.0"

[dev-dependencies]
tracing-subscriber = "0.2"
once_cell = "1.4.0"
simple_logger = "1.6.0"
log = "^0.4"
simple-error = "0.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"